fixed bug with carousel scaling in phone due to browser window vh resize . also fixed whitespace showing underneath navbar when navbar hides when scrolling by setting nav height threshold

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -10,7 +10,7 @@
 }
 
 .hero-carousel {
-  height: calc(100dvh - var(--nav-height));
+  height: calc(var(--real-vh)*100 - var(--nav-height));
   width: 100%;
   position: relative;
   max-width: none;
